# bevy_overlap_2d

./: Cargo.toml  README.md
bevy-overlap-2d-derive/: Cargo.toml
bevy-overlap-2d-derive/src/: lib.rs
examples/: playground.rs  test.rs  walls.rs
src/: collider.rs  draw.rs  layers.rs  lib.rs  plugin.rs  transform_ext.rs
src/collider/: algorithms.rs  capsule.rs  circle.rs  contact.rs  line.rs  point.rs  polygon.rs  rect.rs  triangle.rs
